# lapdog

./: .gitignore  Cargo.toml  README.md
lapdog/: .gitignore  Cargo.toml
lapdog-derive/: Cargo.toml
lapdog-derive/src/: lib.rs
lapdog/examples/: bind_and_search.rs  bind_kerberos_search.rs
lapdog/src/: attribute.rs  auth.rs  bind.rs  compare.rs  integer.rs  length.rs  lib.rs  message.rs  modify.rs  native_tls.rs  parse.rs  read.rs  result.rs  rustls.rs  search.rs  stream.rs  tag.rs  unbind.rs
lapdog/src/bind/: error.rs  kerberos.rs  native_tls.rs  rustls.rs
lapdog/src/parse/: integer.rs
lapdog/src/search/: impl_traits.rs  types.rs
src/: lib.rs  search.rs  unbind.rs
