[package]
name = "lapdog-derive"
version = "0.2.0"
edition = "2024"
description = "Derive macro for building lapdog search entry structs"
authors.workspace = true
license.workspace = true
repository.workspace = true
documentation = "https://docs.rs/lapdog-derive"
keywords = ["derive", "ldap", "procedural-macro", "authentication"]
categories = ["development-tools::procedural-macro-helpers", "authentication"]

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0.95"
quote = "1.0.40"
syn = "2.0.104"
