[package]
name = "lapdog"
authors.workspace = true
license.workspace = true
repository.workspace = true
readme.workspace = true
version = "0.5.3"
edition = "2024"
description = "A safer sync LDAP library"
documentation = "https://docs.rs/lapdog"
keywords = ["ldap", "client", "sync", "authentication"]
categories = ["authentication", "network-programming", "api-bindings"]

[dependencies]
rasn = "0.27.0"
rasn-ldap = "0.27.0"
lapdog-derive = { version = "0.2.0", optional = true, path = "../lapdog-derive" }
native-tls = { version = "0.2.14", optional = true }
cross-krb5 = { version = "0.4.2", default-features = false, optional = true }
rustls = { version = "0.23.29", default-features = false, optional = true, features = ["std"] }
sha2 = { version = "0.10.9", optional = true }

[features]
default = ["derive"]
derive = ["dep:lapdog-derive", "from_octets"]
from_octets = []
kerberos = ["dep:cross-krb5"]
native-tls = ["dep:native-tls"]
rustls = ["dep:rustls", "dep:sha2"]

[dev-dependencies]
native-tls = { version = "0.2.14" }
