[package]
name = "lapdog"
authors.workspace = true
license.workspace = true
repository.workspace = true
readme.workspace = true
version = "0.7.0"
edition = "2024"
description = "An LDAP client library"
documentation = "https://docs.rs/lapdog"
keywords = ["ldap", "client", "authentication"]
categories = ["authentication", "network-programming", "api-bindings"]

[dependencies]
kenobi = { version = "0.2.0", optional = true, path = "../../Kerberos/kenobi/crates/kenobi" }
native-tls = { version = "0.2.18", optional = true }

[features]
native-tls = ["dep:native-tls", "kenobi?/native-tls"]
kerberos = ["dep:kenobi"]